force-app/main/default/objects/Account/fields/Account_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Status__c</fullName>
    <description>Subscription status of the Account</description>
    <inlineHelpText>Subscription status of the Account</inlineHelpText>
    <label>Account Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Subscription</fullName>
            </value>
            <value>
                <fullName>Trial Subscription</fullName>
            </value>
            <value>
                <fullName>Scheduled Churn</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>