force-app/main/default/objects/Account/fields/Account_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Type__c</fullName>
    <description>Subscription Type/Plan that the Account is currently on</description>
    <inlineHelpText>Subscription Type/Plan that the Account is currently on</inlineHelpText>
    <label>Account Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>