force-app/main/default/objects/Account/fields/Active_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Product_Count__c</fullName>
    <description>Number of published products that have future availability or bookings</description>
    <inlineHelpText>Number of published products that have future availability or bookings</inlineHelpText>
    <label>Active Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>