force-app/main/default/objects/Account/fields/Bokun_DB_Account_State__c.field-meta.xml
<CustomField>
    <fullName>Bokun_DB_Account_State__c</fullName>
    <description>The state of the customer&apos;s account in the Bokun DB. The values for this field should be kept in sync with any state/status values that customer accounts can have in the Bokun DB as well as the corresponding field on the SF Lead object.</description>
    <label>Bokun DB Account State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>