force-app/main/default/objects/Account/fields/Bokun_Extranet_Disguise__c.field-meta.xml
<CustomField>
    <fullName>Bokun_Extranet_Disguise__c</fullName>
    <formula>&quot;https://extranet.bokun.io/admin/disguise/add/&quot;&amp;Company_ID__c</formula>
    <label>Bokun Extranet Disguise</label>
    <type>Text</type>
</CustomField>