force-app/main/default/objects/Account/fields/Bokun_Features_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Bokun_Features_Enabled__c</fullName>
    <description>List of features that the Account has enabled within Bokun</description>
    <inlineHelpText>List of features that the Account has enabled within Bokun</inlineHelpText>
    <label>Bokun Features Enabled</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Widgets</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Viator</fullName>
            </value>
            <value>
                <fullName>GYG</fullName>
            </value>
            <value>
                <fullName>Other OTAs</fullName>
            </value>
            <value>
                <fullName>Resource Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>