force-app/main/default/objects/Account/fields/Booking_Count_YTD__c.field-meta.xml
<CustomField>
    <fullName>Booking_Count_YTD__c</fullName>
    <description>Number of bookings last 365 days</description>
    <inlineHelpText>Number of bookings last 365 days</inlineHelpText>
    <label>Booking Count YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>