force-app/main/default/objects/Account/fields/Cancellation_Questionnaire_Answers__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Questionnaire_Answers__c</fullName>
    <description>Account provided answers from the cancellation flow</description>
    <inlineHelpText>Account provided answers from the cancellation flow</inlineHelpText>
    <label>Cancellation Questionnaire Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>