force-app/main/default/objects/Account/fields/Channel_Connections__c.field-meta.xml
<CustomField>
    <fullName>Channel_Connections__c</fullName>
    <description>Number of connected channels</description>
    <inlineHelpText>Number of connected channels</inlineHelpText>
    <label>Channel Connections</label>
    <length>10</length>
    <type>Text</type>
</CustomField>