force-app/main/default/objects/Account/fields/ChargeBee_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>ChargeBee_Payment_Type__c</fullName>
    <description>Displays the Payment Type on File for this Vendor on the ChargeBee platform.</description>
    <inlineHelpText>Displays the Payment Type on File for this Vendor on the ChargeBee platform.</inlineHelpText>
    <label>ChargeBee Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>