force-app/main/default/objects/Account/fields/Churn_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Other_Reason__c</fullName>
    <description>Description as to why lead churned</description>
    <inlineHelpText>Description as to why lead churned</inlineHelpText>
    <label>Churn Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>