force-app/main/default/objects/Account/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <description>What reason was the account set inactive?</description>
    <inlineHelpText>What reason was the account set inactive?</inlineHelpText>
    <label>Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified (No go live)</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>