force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the account is located, provided by Bokun Server</description>
    <inlineHelpText>City where the account is located, provided by Bokun Server</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>