force-app/main/default/objects/Account/fields/Company_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Create_Date__c</fullName>
    <description>Date Account was created on Bokun Platform</description>
    <inlineHelpText>Date Account was created on Bokun Platform</inlineHelpText>
    <label>Bokun Account Created Date</label>
    <type>Date</type>
</CustomField>