force-app/main/default/objects/Account/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>Numeric Bokun ID of the Company</description>
    <externalId>true</externalId>
    <label>Bokun ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>