force-app/main/default/objects/Account/fields/Company_Last_Seen__c.field-meta.xml
<CustomField>
    <fullName>Company_Last_Seen__c</fullName>
    <description>Date when the account last logged into the Bokun Extranet</description>
    <inlineHelpText>Date when the account last logged into the Bokun Extranet</inlineHelpText>
    <label>Extranet Last Login Date</label>
    <type>Date</type>
</CustomField>