force-app/main/default/objects/Account/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <defaultValue>&quot;Trying&quot;</defaultValue>
    <description>Trying: New signup/exploring
Implementing: Publishing products/Enabling connections
Activated: Successful bookings/Booking Charges
Churned: Inactive</description>
    <inlineHelpText>Trying: New signup/exploring
Implementing: Publishing products/Enabling connections
Activated: Successful bookings/Booking Charges
Churned: Inactive</inlineHelpText>
    <label>Bokun Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trying</fullName>
            </value>
            <value>
                <fullName>Implementing</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>