force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the account is managed (not necessarily where their experiences are offered)</description>
    <formula>BillingCountry</formula>
    <inlineHelpText>Country where the account is managed (not necessarily where their experiences are offered)</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>