force-app/main/default/objects/Account/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <description>Denotes an internally defined region within a country/area</description>
    <inlineHelpText>Denotes an internally defined region within a country/area</inlineHelpText>
    <label>Country Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Reykjanes</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Westfjords</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>