force-app/main/default/objects/Account/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <description>Customer Sentiment as determined by the sales team</description>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK/Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>