force-app/main/default/objects/Account/fields/Customer_Team_Domain__c.field-meta.xml
<CustomField>
    <fullName>Customer_Team_Domain__c</fullName>
    <description>The custom Bokun.io subdomain chosen by the Account</description>
    <inlineHelpText>The custom Bokun.io subdomain chosen by the Account</inlineHelpText>
    <label>Custom Web Subdomain</label>
    <type>Url</type>
</CustomField>