force-app/main/default/objects/Account/fields/Direct_Online_Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Direct_Online_Booking_Count__c</fullName>
    <description>Bookings via channel: Direct Online</description>
    <inlineHelpText>Bookings via channel: Direct Online</inlineHelpText>
    <label>Direct Online Booking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>