force-app/main/default/objects/Account/fields/Dunning_Status__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Status__c</fullName>
    <description>Dunning Status if there is an issue with subscription payment</description>
    <inlineHelpText>Dunning Status if there is an issue with subscription payment</inlineHelpText>
    <label>Dunning Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>