force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>General Email Address</description>
    <inlineHelpText>General Email Address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>