force-app/main/default/objects/Account/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Total Engagement Score calculated from the Bokun Database  and stored in a KPI table weekly. The data point represents the total score off over 20 engagement pieces for each account.</description>
    <inlineHelpText>Total Engagement Score calculated from the Bokun Database  and stored in a KPI table weekly. The data point represents the total score off over 20 engagement pieces for each account.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>