force-app/main/default/objects/Account/fields/First_Billable_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Billable_Booking_Date__c</fullName>
    <description>The date of the supplier&apos;s first booking charge created &gt;$0</description>
    <inlineHelpText>The date of the supplier&apos;s first booking charge created &gt;$0</inlineHelpText>
    <label>First Billable Booking Date</label>
    <type>Date</type>
</CustomField>