force-app/main/default/objects/Account/fields/Free_Tier_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Free_Tier_Engagement_Score__c</fullName>
    <description>A sum of the free tier specific engagement score pieces.</description>
    <inlineHelpText>A sum of the free tier specific engagement score pieces.</inlineHelpText>
    <label>Free Tier Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>