force-app/main/default/objects/Account/fields/Free_Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Expiration__c</fullName>
    <description>Date that the Free Trial is scheduled to expire</description>
    <inlineHelpText>Date that the Free Trial is scheduled to expire</inlineHelpText>
    <label>Free Trial Expiration Date</label>
    <type>Date</type>
</CustomField>