force-app/main/default/objects/Account/fields/ICP__c.field-meta.xml
<CustomField>
    <fullName>ICP__c</fullName>
    <description>Best fit Ideal Customer Profile</description>
    <inlineHelpText>Best fit Ideal Customer Profile</inlineHelpText>
    <label>ICP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic Duo</fullName>
            </value>
            <value>
                <fullName>Rising Stars</fullName>
            </value>
            <value>
                <fullName>Whales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>