force-app/main/default/objects/Account/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date that the Account goes inactive - Churned, Trial expired, etc.</description>
    <inlineHelpText>Date that the Account goes inactive - Churned, Trial expired, etc.</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>