force-app/main/default/objects/Account/fields/Internal_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Classification__c</fullName>
    <description>Internal classification/contract level of the Account.</description>
    <inlineHelpText>Internal classification/contract level of the Account.</inlineHelpText>
    <label>Internal Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Account</fullName>
            </value>
            <value>
                <fullName>Emerging Key Account</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Inventory Services Key Account</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>