force-app/main/default/objects/Account/fields/Internal_Rank__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rank__c</fullName>
    <description>Account Management Internal Ranking</description>
    <inlineHelpText>Account Management Internal Ranking</inlineHelpText>
    <label>Internal Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top 10</fullName>
            </value>
            <value>
                <fullName>Top 20</fullName>
            </value>
            <value>
                <fullName>Top 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>