force-app/main/default/objects/Account/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is the companies account active on the Bokun Platform?</description>
    <inlineHelpText>Is the companies account active on the Bokun Platform?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>