force-app/main/default/objects/Account/fields/Is_BD_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Is_BD_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Is BD Supplier</label>
    <type>Checkbox</type>
</CustomField>