force-app/main/default/objects/Account/fields/Is_Using_Affiliate_Hub__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Affiliate_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Is Using Affiliate Hub</label>
    <type>Checkbox</type>
</CustomField>