force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Primary language spoken by the account</description>
    <inlineHelpText>Primary language spoken by the account</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>