force-app/main/default/objects/Account/fields/Last_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Date__c</fullName>
    <description>Date that the Account was last billed (not necessarily when they paid the bill)</description>
    <inlineHelpText>Date that the Account was last billed (not necessarily when they paid the bill)</inlineHelpText>
    <label>Last Billing Date</label>
    <type>Date</type>
</CustomField>