force-app/main/default/objects/Account/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Date of the last outreach to the Account</description>
    <formula>LastActivityDate</formula>
    <inlineHelpText>Date of the last outreach to the Account</inlineHelpText>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>