force-app/main/default/objects/Account/fields/List_of_Apps__c.field-meta.xml
<CustomField>
    <fullName>List_of_Apps__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>List of Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>