force-app/main/default/objects/Account/fields/Marketplace_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Contract_Count__c</fullName>
    <description>Number of Active contracts the account has on the Marketplace</description>
    <inlineHelpText>Number of Active contracts the account has on the Marketplace</inlineHelpText>
    <label>Marketplace Contract Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>