force-app/main/default/objects/Account/fields/Marketplace_Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_Profile_Type__c</fullName>
    <description>Provided by Account input during Marketplace Profile Setup</description>
    <inlineHelpText>Provided by Account input during Marketplace Profile Setup</inlineHelpText>
    <label>Marketplace Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>