force-app/main/default/objects/Account/fields/Next_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Amount__c</fullName>
    <description>Amount in Dollars of the Account&apos;s next bill</description>
    <inlineHelpText>Amount in Dollars of the Account&apos;s next bill</inlineHelpText>
    <label>Next Billing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>