force-app/main/default/objects/Account/fields/Onboarding_Flow__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Flow__c</fullName>
    <description>This field is controlled on the Bokun platform. It determines in which onboarding flow an account falls in a the time of signup.</description>
    <inlineHelpText>This field is controlled on the Bokun platform. It determines in which onboarding flow an account falls in a the time of signup.</inlineHelpText>
    <label>Onboarding Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>