force-app/main/default/objects/Account/fields/Onboarding_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Milestones__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Onboarding Milestones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>