force-app/main/default/objects/Account/fields/Opportunity_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Risk_Level__c</fullName>
    <label>Opportunity Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>