force-app/main/default/objects/Account/fields/Opt_Out_Comment__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Comment__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Opt Out Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>