force-app/main/default/objects/Account/fields/Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Reason__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Opt Out Reason</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>