force-app/main/default/objects/Account/fields/OTA_Connections__c.field-meta.xml
<CustomField>
    <fullName>OTA_Connections__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>OTA Connections</label>
    <type>TextArea</type>
</CustomField>