force-app/main/default/objects/Account/fields/Paid_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Conversion_Date__c</fullName>
    <description>Date when the Account first converted to a Paid Account</description>
    <inlineHelpText>Date when the Account first converted to a Paid Account</inlineHelpText>
    <label>Paid Conversion Date</label>
    <type>Date</type>
</CustomField>