force-app/main/default/objects/Account/fields/Parent_Bokun_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Bokun_ID__c</fullName>
    <description>Parent Vendor ID - if this is set, this Account is a subvendor of another Account.</description>
    <inlineHelpText>Parent Vendor ID - if this is set, this Account is a subvendor of another Account.</inlineHelpText>
    <label>Parent Bokun ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>