force-app/main/default/objects/Account/fields/Parent_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_ID__c</fullName>
    <description>Parent Vendor ID - if this is set, this Account is a subvendor of another Account.</description>
    <externalId>true</externalId>
    <inlineHelpText>Parent Vendor ID - if this is set, this Account is a subvendor of another Account.</inlineHelpText>
    <label>Parent Company ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>