force-app/main/default/objects/Account/fields/Payment_AutoCollection__c.field-meta.xml
<CustomField>
    <fullName>Payment_AutoCollection__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Payment AutoCollection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>