force-app/main/default/objects/Account/fields/Payment_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Failure_Reason__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Payment Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>