force-app/main/default/objects/Account/fields/Payment_Provider_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provider_Count__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Payment Provider Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>