force-app/main/default/objects/Account/fields/Payment_Providers__c.field-meta.xml
<CustomField>
    <fullName>Payment_Providers__c</fullName>
    <description>Payment Providers that the Account has successfully connected with</description>
    <inlineHelpText>Payment Providers that the Account has successfully connected with</inlineHelpText>
    <label>Connected Payment Providers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>