force-app/main/default/objects/Account/fields/Platform_Score__c.field-meta.xml
<CustomField>
    <fullName>Platform_Score__c</fullName>
    <description>Populated from Bokun Server</description>
    <inlineHelpText>Populated from Bokun Server</inlineHelpText>
    <label>Platform Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>