force-app/main/default/objects/Account/fields/saas_Apps__c.field-meta.xml
<CustomField>
    <fullName>saas_Apps__c</fullName>
    <description>A comma separated list of apps the supplier has enabled on Bokun&apos;s App Store.</description>
    <inlineHelpText>A comma separated list of apps the supplier has enabled on Bokun&apos;s App Store.</inlineHelpText>
    <label>saas Apps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>