force-app/main/default/objects/Account/fields/saas_Plan__c.field-meta.xml
<CustomField>
    <fullName>saas_Plan__c</fullName>
    <description>The current SAAS plan of the vendor on Bokun. Populated from Bokun Server</description>
    <inlineHelpText>The current SAAS plan of the vendor on Bokun. Populated from Bokun Server</inlineHelpText>
    <label>saas Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>